# rust-web3-risk-platform

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  LICENSE  Makefile  README.md  VERIFICATION.md  backend_stats.json  doc.md  docker-compose.prod.yml  docker-compose.yml  final.md  prometheus.yml  start-all.sh  step.md  v0.0.0.md  v0.0.1.md  v0.0.2.md
.github/workflows/: ci.yml
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
backend/alert_engine/: Cargo.toml
backend/alert_engine/src/: lib.rs
backend/api/: Cargo.toml  openapi.yaml
backend/api/src/: app.rs  auth_middleware.rs  bootstrap.rs  config.rs  lib.rs  main.rs  nonce_limiter.rs  state.rs  telemetry.rs
backend/api/src/repositories/: alert_repository.rs  mod.rs  portfolio_repository.rs  price_cache_repository.rs  price_history_repository.rs  session_repository.rs  strategy_repository.rs  transaction_repository.rs  user_repository.rs  wallet_repository.rs
backend/api/src/routes/: alerts.rs  auth.rs  health.rs  mod.rs  portfolio.rs  secure.rs  strategies.rs  wallets.rs
backend/api/src/services/: alert.rs  history.rs  mod.rs  portfolio.rs
backend/api/tests/: integration.rs
backend/auth/: Cargo.toml
backend/auth/src/: lib.rs
backend/domain/: Cargo.toml
backend/domain/src/: lib.rs
backend/indexer/: Cargo.toml
backend/indexer/src/: lib.rs
backend/migrations/: 0001_init.sql  0002_auth_state.sql  0003_refresh_and_role_cache.sql  0004_indexer_runs.sql  0005_alert_triggers.sql  0006_portfolio_daily_and_transactions.sql  0007_price_history.sql  0008_alert_cooldown.sql  0009_price_cache.sql  0010_price_history_chain.sql
backend/strategy_engine/: Cargo.toml
backend/strategy_engine/src/: lib.rs
contracts/: hardhat.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
contracts/cache/: console-history.txt  solidity-files-cache.json
contracts/contracts/: MockERC20.sol  RoleManager.sol
contracts/scripts/: deploy.ts  deployToken.ts  setRole.ts
contracts/test/: RoleManager.ts
contracts/typechain-types/: MockERC20.ts  RoleManager.ts  hardhat.d.ts  index.ts
contracts/typechain-types/factories/: MockERC20__factory.ts  RoleManager__factory.ts  (+1 more)
frontend/: .gitignore  Dockerfile  config.yaml  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/components/: LanguageSwitcher.tsx
frontend/lib/: alerts-hooks.ts  api.ts  auth-context.tsx  i18n.tsx  portfolio-hooks.ts  query-provider.tsx  theme.tsx
frontend/public/: sample-prices.csv
infra/prometheus/: prometheus.yml
scripts/: verify-deployment.sh
(+24 files in other folders)
