[package]
name = "api"
version = "0.1.0"
edition = "2021"
default-run = "api"

[dependencies]
axum = { version = "0.7", features = ["macros", "tokio"] }
axum-extra = { version = "0.9", features = ["typed-header", "cookie"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "request-id"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
dotenvy = "0.15"
time = "0.3"
chrono = { version = "0.4", features = ["serde", "clock"] }

sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "migrate",
  "macros",
] }

ethers = { version = "2", features = ["abigen", "ws", "rustls"] }

thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

anyhow = "1"
rand = "0.8"
redis = { version = "0.25", features = ["tokio-comp"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
futures-util = "0.3"
futures = "0.3"

domain = { path = "../domain" }
auth = { path = "../auth" }
indexer = { path = "../indexer" }
strategy_engine = { path = "../strategy_engine" }
alert_engine = { path = "../alert_engine" }
async-trait = "0.1"

[dev-dependencies]
hyper = "1"
