[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
ethers = { version = "2", features = ["abigen", "ws", "rustls"] }
thiserror = "1"
tracing = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde", "clock"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
domain = { path = "../domain" }
