[package]
name = "strategy_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
domain = { path = "../domain" }
chrono = { version = "0.4", features = ["serde", "clock"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
